<resources>
    <string name="app_name">Demo Collection</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_title_animations">Animations</string>
    <string name="submenu_title_animations">Animations</string>
    <string name="submenu_title_firebase">Firebase</string>
    <string name="motion_layout">MotionLayout</string>
    <string name="object_animator">ObjectAnimator</string>
    <string name="view_property_animator">ViewPropertyAnimator</string>
    <string name="transition_manager">TransitionManager</string>
    <string name="vector_based_animations">Animated Vector Graphics</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>