<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/submenu_animations"
        android:title="@string/submenu_title_animations" >
        <menu>
            <item
                android:id="@+id/nav_animations_motion_layout"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/motion_layout" />
            <item
                android:id="@+id/nav_animations_object_animator"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/object_animator" />
            <item
                android:id="@+id/nav_animations_property"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/view_property_animator" />
            <item
                android:id="@+id/nav_animations_transition_manager"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/transition_manager" />
            <item
                android:id="@+id/nav_animations_vector"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/vector_based_animations" />
        </menu>
    </item>

    <item
        android:id="@+id/submenu_firebase"
        android:title="@string/submenu_title_firebase" >
    </item>
</menu>